Ticket #607 Downloads table: Mark updated files with status "Updated" instead of "Completed" By Jay. I can only change text in these two languages.

--- a/src/etc/Translation_zh.properties
+++ b/src/etc/Translation_zh.properties
@@ -917,7 +917,7 @@ transfer.problem.temp.file.write=\u65e0\u6cd5\u5220\u9664\u5199\u5165 {0} {1} \u
 transfer.problem.title=\u6587\u4ef6\u4f20\u8f93\u51fa\u9519
 transfer.problem.transfer.exception={0}\: {1}\u5b58\u5728\u4e00\u4e2a\u4f20\u8f93\u5f02\u5e38\uff08TransferException\uff09
 
-transfers.completed=\u5b8c\u6210
+transfers.completed=\u5df2\u66f4\u65b0
 transfers.copying=\u6b63\u5728\u590d\u5236\u6570\u636e
 transfers.eta=ETA
 transfers.from=\u6e90
