--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -917,21 +917,21 @@ title.search.users=Benutzer suchen
 ##transfer.problem.title=File Transfer Problem
 ##transfer.problem.transfer.exception=There was a TransferException\: {0}
 
-transfers.completed=vollst\u00e4ndig
-##transfers.copying=Copying data
-transfers.eta=verbleibend
+transfers.completed=Vollst\u00e4ndig
+transfers.copying=Kopiere Daten
+transfers.eta=Verbleibend
 transfers.from=Von
-transfers.hashing=Berechne Hashes
+transfers.hashing=Vorbereiten
 transfers.kbs={0} KB/s
 transfers.local=lokal
 transfers.pending=Ausstehend
 transfers.progress=Fortschritt
-transfers.queued=in der Warteschlange
-##transfers.remotehashing=Waiting for requests
-transfers.requested=angefordert
+transfers.queued=Warte
+transfers.remotehashing=Vorbereiten
+transfers.requested=Angefordert
 transfers.searching=Suche...
 transfers.to=Zu
-##transfers.verifying=Verifying sync
+transfers.verifying=Abschliessen
 
 unignorefile.description=Datei(en) werden werden wieder verf\u00fcgbar gemacht (von der Ausschlussliste entfernt)
 unignorefile.key=V
